--- a/index.html
+++ b/index.html
@@ -18,20 +18,22 @@
           </ul>
         </div>
       </nav>
-      <img class="page-banner" src=""/>
-      <div class="btn--download">Скачать приложение</div>
-      <ul class="apps-links">
-        <li class="app-link app-link--apple"><a href=""></a></li>
-        <li class="app-link app-link--android"><a href=""></a></li>
-        <li class="app-link app-link--windows"><a href=""></a></li>
-      </ul>
-      <p>Доступно для Iphone, Ipad, Android, Windows Phone, OS X, Windows 8</p>
+      <img class="page-header__banner" src=""/>
+      <div class="page-header__bottom">
+        <div class="btnbtn--download">Скачать приложение</div>
+        <ul class="apps-links">
+          <li class="app-link app-link--apple"><a href=""></a></li>
+          <li class="app-link app-link--android"><a href=""></a></li>
+          <li class="app-link app-link--windows"><a href=""></a></li>
+        </ul>
+        <p>Доступно для Iphone, Ipad, Android, Windows Phone, OS X, Windows 8</p>
+    </div>
     </header>
     <main>
       <section class="intro">
-        <div class="intro__titles">
-          <h2 class="intro__title1">Устали от серости мегаполиса?</h2>
-          <h2 class="intro__title2">Нам есть, что вам предложить!</h2>
+        <div class="intro__title-group">
+          <h2 class="intro__title">Устали от серости мегаполиса?</h2>
+          <h2 class="intro__title">Нам есть, что вам предложить!</h2>
         </div>
         <ul class="intro__suggestions">
           <li class="intro__item suggestion">
@@ -52,7 +54,7 @@
         <div class="reviews__wrapper slider">
           <ul class="reviews__items">
             <li class="reviews__item slider__item">
-              <h2 class='reviews__author'>Николай Петров</h2>
+              <h2 class="reviews__author">Николай Петров</h2>
               <p>«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!»</p>
             </li>
           </ul>
