--- a/photo.html
+++ b/photo.html
@@ -102,23 +102,25 @@
         </ul>
 
         <div></div>
-        <button class="btn--add">Запостить</button>
-        <button class="btn--cancel">Отмена</button>
+        <button class="btn btn--add">Запостить</button>
+        <button class="btn btn--cancel">Отмена</button>
       </section>
     </main>
     <footer class="page-footer">
-      <div>
-        <span class="logo"></span><span>PINK</span>
+      <div class="page-footer__wrapper">
+        <div class="page-footer__logo">
+          <span class="logo"></span><span class="logo__title">PINK</span>
+        </div>
+        <ul class="page-footer__socials socials">
+          <li class="socials__item"><a class="socials__link--tw" href="#">Twitter</a></li>
+          <li class="socials__item"><a class="socials__link--fb" href="#">Facebook</a></li>
+          <li class="socials__item"><a class="socials__link--yt" href="#">Youtube</a></li>
+        </ul>
+        <p class="page-footer__copyright">
+          Разработано:
+          <a class="btn page-footer__copyright" href="#">htmlacademy</a>
+        </p>
       </div>
-      <ul class="page-footer__socials socials">
-        <li class="socials__item"><a class="socials__link--tw" href="#">Twitter</a></li>
-        <li class="socials__item"><a class="socials__link--fb" href="#">Facebook</a></li>
-        <li class="socials__item"><a class="socials__link--yt" href="#">Youtube</a></li>
-      </ul>
-      <p class="page-footer__copyright">
-        Разработано:
-        <a class="btn page-footer__copyright" href="#">htmlacademy</a>
-      </p>
     </footer>
 
     <!-- <p>Репозиторий создан для обучения на интенсивном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/adaptive">Продвинутый HTML и CSS</a>».</p> -->
