Создал структуру препроцессорных файлов + мелкие правки по БЭМ

--- a/form.html
+++ b/form.html
@@ -52,13 +52,13 @@
           <label class="checklist__item"><input type="checkbox" name="check6">Разгромил отель</label>
         </fieldset>
 
-        <fieldset class="contacts">
-          <label class="contacts__item">
+        <fieldset class="user-contacts">
+          <label class="user-contacts__item">
             номер телефона
             <input type="tel" name="phone-number"  placeholder="Номер, пожалуйста">
           </label>
 
-          <label class="contacts__item">
+          <label class="user-contacts__item">
             адрес почты
             <input type="email" name="email" placeholder="Введите почту *">
           </label>
