--- a/photo.html
+++ b/photo.html
@@ -41,7 +41,7 @@
                 </div>
                 <cite class="posts__author">Левон (5 часов назад)</cite>
                 <p class="posts__desc">Вчера он на луну летал, сегодня в руки к нам попал.</p>
-                <div class="like">мне нравится</div>
+                <div class="posts__like">мне нравится</div>
             </li>
             <li class="posts__item">
                 <div class="posts__photo">
@@ -49,7 +49,7 @@
                 </div>
                 <cite class="posts__author">Антон (12 часов назад)</cite>
                 <p class="posts__desc">Соседи будут рады!</p>
-                <div class="like">мне нравится</div>
+                <div class="posts_like">мне нравится</div>
             </li>
             <li class="posts__item">
                 <div class="posts__photo">
@@ -57,7 +57,7 @@
                 </div>
                 <cite class="posts__author">Борис (20 часов назад)</cite>
                 <p class="posts__desc"> Здесь могла быть ваша цитата о высоком и вечном.</p>
-                <div class="like">мне нравится</div>
+                <div class="posts__like">мне нравится</div>
             </li>
             <li class="posts__item">
                 <div class="posts__photo">
@@ -65,7 +65,7 @@
                 </div>
                 <cite class="posts__author">Сергей (25 часов назад)</cite>
                 <p class="posts__desc"> Самая кубанская в мире</p>
-                <div class="like">мне нравится</div>
+                <div class="posts__like">мне нравится</div>
             </li>
             <li class="posts__item">
                 <div class="posts__photo">
@@ -73,7 +73,7 @@
                 </div>
                 <cite class="posts__author">Максим (40 часов назад)</cite>
                 <p class="posts__desc"> Где снег-то?</p>
-                <div class="like">мне нравится</div>
+                <div class="posts__like">мне нравится</div>
             </li>
             <li class="posts__item">
                 <div class="posts__photo">
@@ -81,7 +81,7 @@
                 </div>
                 <cite class="posts__author">Надежда (45 часов назад)</cite>
                 <p class="posts__desc">Всем GM и взаимные лайки!</p>
-                <div class="like">мне нравится</div>
+                <div class="posts__like">мне нравится</div>
             </li>
 
           </ul>
