--- a/form.html
+++ b/form.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Пинк</title>
+    <link rel="stylesheet" href="css/style.css">
   </head>
-  <body>
+  <body class="page">
     <header class="page-header">
       <h1 class="page-title">Pink</h1>
       <nav class="main-menu main-menu--closed">
