--- a/index.html
+++ b/index.html
@@ -3,11 +3,14 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Пинк</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0 , maximum-scale=1.0, user-scalable=no">
     <link rel="stylesheet" href="css/style.css">
   </head>
-  <body>
+  <body class="page">
     <header class="page-header">
-      <h1 class="page-title">Pink</h1>
+      <div class="page-header__logo">
+        <img src="img/logo-pink-white-mobile.svg" width="77" height="25" alt="Pink"/>
+      </div>
       <nav class="main-menu main-menu--closed">
         <div class="main-menu__toggle">Открыть меню</div>
         <div class="main-menu__wrapper">
@@ -19,7 +22,7 @@
           </ul>
         </div>
       </nav>
-      <img class="page-header__banner" src=""/>
+      <img class="page-header__banner" src="img/iphone-hand-mobile@1x.png"/>
       <div class="page-header__bottom">
         <div class="btn btn--download">Скачать приложение</div>
         <ul class="apps-links">
@@ -28,13 +31,13 @@
           <li class="apps-links__link apps-links__link--windows"><a href=""></a></li>
         </ul>
         <p>Доступно для Iphone, Ipad, Android, Windows Phone, OS X, Windows 8</p>
-    </div>
+      </div>
     </header>
     <main>
       <section class="intro">
         <div class="intro__title-group">
-          <h2 class="intro__title">Устали от серости мегаполиса?</h2>
-          <h2 class="intro__title">Нам есть, что вам предложить!</h2>
+          <div class="intro__title">Устали от серости мегаполиса?</div>
+          <div class="intro__title">Нам есть, что вам предложить!</div>
         </div>
         <ul class="intro__suggestions">
           <li class="intro__item suggestion">
@@ -53,31 +56,46 @@
       </section>
       <section class="reviews">
         <div class="reviews__wrapper slider">
-          <ul class="reviews__items">
+          <ul class="slider__items">
+            <li class="reviews__item slider__item">
+              <h2 class="reviews__author">Николай Петров</h2>
+              <p>«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!»</p>
+            </li>
+            <li class="reviews__item slider__item">
+              <h2 class="reviews__author">Николай Петров</h2>
+              <p>«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!»</p>
+            </li>
             <li class="reviews__item slider__item">
               <h2 class="reviews__author">Николай Петров</h2>
               <p>«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!»</p>
             </li>
           </ul>
           <ul class="slider__controls">
-            <li class="slider_input"></li>
-            <li class="slider_input slider__input--active" ></li>
-            <li class="slider_input"></li>
+            <li class="slider__input"></li>
+            <li class="slider__input slider__input--active" ></li>
+            <li class="slider__input"></li>
           </ul>
 
         </div>
       </section>
       <section class="advantages">
         <div class="advantages__wrapper slider">
-          <ul class="advantages__items">
+          <ul class="slider__items">
+            <li class="advantages__item slider__item">
+              <img src="">
+            </li>
+            <li class="advantages__item slider__item">
+              <img src="">
+            </li>
             <li class="advantages__item slider__item">
               <img src="">
             </li>
           </ul>
+
           <ul class="slider__controls">
-            <li class="slider_input"></li>
-            <li class="slider_input slider__input--active"></li>
-            <li class="slider_input"></li>
+            <li class="slider__input"></li>
+            <li class="slider__input slider__input--active"></li>
+            <li class="slider__input"></li>
           </ul>
         </div>
       </section>
@@ -88,19 +106,19 @@
         <ul class="page-footer__items contacts">
           <li class="contacts__item">
             <h3 class="contacts__item-title">Звоните:</h3>
-            <a class="contacts__item-phone"href="tel:+7 (812) 555-66-66">+7 (812) 555-66-66</a>
+            <a class="contacts__item-val"href="tel:+7 (812) 555-66-66">+7 (812) 555-66-66</a>
           </li>
           <li class="contacts__item">
             <h3 class="contacts__item-title">Пишите:</h3>
-            <p class="contacts__item-mail">mail@htmlacademy.ru</p>
+            <p class="contacts__item-val">mail@htmlacademy.ru</p>
           </li>
           <li class="contacts__item">
             <h3 class="contacts__item-title">Приезжайте в гости:</h3>
-            <p class="contacts__item-addr">ул. Большая<br>Конюшенная, 19/8</p>
+            <p class="contacts__item-val">ул. Большая<br>Конюшенная, 19/8</p>
           </li>
         </ul>
-        <div class="page-footer__map"></div>
       </div>
+      <div class="page-footer__map"></div>
     </footer>
 
     <!-- <p>Репозиторий создан для обучения на интенсивном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/adaptive">Продвинутый HTML и CSS</a>».</p> -->
