--- a/form.html
+++ b/form.html
@@ -8,25 +8,27 @@
   </head>
   <body class="page">
     <header class="page-header">
-      <div class="page-header__logo">
-        <img src="img/logo-pink-white-mobile.svg" width="77" height="25" alt="Pink"/>
-      </div>
-      <nav class="main-menu">
-        <div class="main-menu__toggle"></div>
-        <div class="main-menu__wrapper">
-          <ul class="main-menu__items">
-            <li class="main-menu__item"><a href="#">Главная</a></li>
-            <li class="main-menu__item"><a href="#">Фотографии</a></li>
-            <li class="main-menu__item"><a href="#">Конкурс</a></li>
-            <li class="main-menu__item"><a href="#">htmlacademy</a></li>
-          </ul>
+      <div class="page-header__wrapper">
+        <div class="page-header__logo">
+          <img src="img/logo-pink-white-mobile.svg" width="77" height="25" alt="Pink"/>
         </div>
-      </nav>
+        <nav class="main-menu">
+          <div class="main-menu__toggle"></div>
+          <div class="main-menu__wrapper">
+            <ul class="main-menu__items">
+              <li class="main-menu__item"><a href="#">Главная</a></li>
+              <li class="main-menu__item"><a href="#">Фотографии</a></li>
+              <li class="main-menu__item"><a href="#">Конкурс</a></li>
+              <li class="main-menu__item"><a href="#">htmlacademy</a></li>
+            </ul>
+          </div>
+        </nav>
 
-      <h2 class="page-header__title">Конкурс на самое безбашенное путешествие с Пинк</h2>
-
+        <h2 class="page-header__title">Конкурс на самое безбашенное путешествие с Пинк</h2>
+      </div>
     </header>
     <main class="main">
+      <div class="main__wrapper">
       <div class="main__top">
         <p>Поделитесь своей историей и получите шанс выиграть ценный приз — 1000 миль на вашу бонусную карту! Пожалуйста, заполните </p>
       </div>
@@ -84,6 +86,7 @@
         <p>- обязательные поля</p>
 
       </form>
+      </div>
     </main>
     <footer class="page-footer">
       <div class="page-footer__wrapper">
