--- a/photo.html
+++ b/photo.html
@@ -8,11 +8,12 @@
   </head>
   <body class="page">
     <header class="page-header">
+      <div class="page-header__wrapper">
       <div class="page-header__logo">
         <img src="img/logo-pink-white-mobile.svg" width="77" height="25" alt="Pink"/>
       </div>
-      <nav class="main-menu main-menu--closed">
-        <div class="main-menu__toggle">Открыть меню</div>
+      <nav class="main-menu">
+        <div class="main-menu__toggle"></div>
         <div class="main-menu__wrapper">
           <ul class="main-menu__items">
             <li class="main-menu__item"><a href="#">Главная</a></li>
@@ -28,6 +29,7 @@
 
       <div class="page-header__bottom page-header__bottom--white"><p>Взгляните на фотографии, которые выкладывают пользователи!<br>
         Видите, как не хватает ваших?</p></div>
+      </div>
     </header>
     <main>
       <section class="posts">
