--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0 , maximum-scale=1.0, user-scalable=no"> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <script src="js/jquery.js"></script>
   </head>
   <body class="page">
     <header class="page-header">
@@ -14,7 +13,7 @@
         <div class="page-header__logo">
           <img src="img/logo-pink-white-mobile.svg" width="76" height="25" alt="Pink"/>
         </div>
-        <nav class="main-menu main-menu">
+        <nav class="main-menu">
           <button class="main-menu__toggle"></button>
           <div class="main-menu__wrapper">
             <ul class="main-menu__items">
@@ -25,7 +24,7 @@
             </ul>
           </div>
         </nav>
-        <img class="page-header__banner" src="img/iphone-hand-mobile@1x.png"/>
+        <!-- <img class="page-header__banner" src="img/iphone-hand-mobile@1x.png"/>
         <div class="page-header__bottom">
           <div class="btn btn--download">Скачать приложение</div>
           <ul class="apps-links">
@@ -35,9 +34,9 @@
           </ul>
           <p>Доступно для Iphone, Ipad, Android, Windows Phone, OS X, Windows 8</p>
         </div>
-      </div>
+      </div> -->
     </header>
-    <main>
+    <!-- <main>
       <section class="intro">
         <div class="intro__wrapper">
           <div class="intro__title-group">
@@ -126,9 +125,10 @@
         <div class="page-footer__map"></div>
       </div>
 
-    </footer>
+    </footer> -->
 
     <!-- <p>Репозиторий создан для обучения на интенсивном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/adaptive">Продвинутый HTML и CSS</a>».</p> -->
-
+  <script src="js/jquery.js"></script>
+  <script src="js/script.js"></script>
   </body>
 </html>
