--- a/index.html
+++ b/index.html
@@ -9,10 +9,24 @@
   </head>
   <body class="page">
     <header class="page-header">
-      <div class="page-header__wrapper">
-        <div class="page-header__logo">
-          <img src="img/logo-pink-white-mobile.svg" width="76" height="25" alt="Pink"/>
+      <div class="page-header__logo page-header__logo--mobile">
+        <div class="page-header__wrapper">
+          <img src="img/logo-pink-white-mobile.svg" width="75" height="22" alt="Pink"/>
         </div>
+      </div>
+      <div class="page-header__logo page-header__logo--tablet">
+        <div class="page-header__wrapper">
+          <img src="img/logotype-white-tablet.png" width="147" height="41" alt="Pink"/>
+        </div>
+        
+      </div>
+      <div class="page-header__logo page-header__logo--desktop">
+        <div class="page-header__wrapper">
+          <img src="img/logotype-white-desktop.png" width="148" height="40" alt="Pink"/>
+        </div>
+      </div>
+
+      <div class="page-header__wrapper">
         <nav class="main-menu">
           <button class="main-menu__toggle"></button>
           <div class="main-menu__wrapper">
@@ -20,11 +34,15 @@
               <li class="main-menu__item"><a href="#">Главная</a></li>
               <li class="main-menu__item"><a href="#">Фотографии</a></li>
               <li class="main-menu__item"><a href="#">Конкурс</a></li>
-              <li class="main-menu__item"><a href="#">htmlacademy</a></li>
+              <li class="main-menu__item"><a href="#">html academy</a></li>
             </ul>
           </div>
         </nav>
-        <!-- <img class="page-header__banner" src="img/iphone-hand-mobile@1x.png"/>
+
+        <div class="page-header__banner">
+          <!-- <img class="page-header__banner" src="img/iphone-hand-mobile@1x.png"/> -->
+        </div>
+         
         <div class="page-header__bottom">
           <div class="btn btn--download">Скачать приложение</div>
           <ul class="apps-links">
@@ -34,9 +52,9 @@
           </ul>
           <p>Доступно для Iphone, Ipad, Android, Windows Phone, OS X, Windows 8</p>
         </div>
-      </div> -->
+      </div>
     </header>
-    <!-- <main>
+    <main>
       <section class="intro">
         <div class="intro__wrapper">
           <div class="intro__title-group">
@@ -66,14 +84,14 @@
               <h2 class="reviews__author">Николай Петров</h2>
               <p>«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!»</p>
             </li>
-            <li class="reviews__item slider__item">
+            <!-- <li class="reviews__item slider__item">
               <h2 class="reviews__author">Николай Петров</h2>
               <p>«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!»</p>
             </li>
             <li class="reviews__item slider__item">
               <h2 class="reviews__author">Николай Петров</h2>
               <p>«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!»</p>
-            </li>
+            </li> -->
           </ul>
           <ul class="slider__controls">
             <li class="slider__input"></li>
@@ -89,12 +107,12 @@
             <li class="advantages__item slider__item">
               <img src="">
             </li>
-            <li class="advantages__item slider__item">
+            <!-- <li class="advantages__item slider__item">
               <img src="">
             </li>
             <li class="advantages__item slider__item">
               <img src="">
-            </li>
+            </li> -->
           </ul>
 
           <ul class="slider__controls">
@@ -104,28 +122,46 @@
           </ul>
         </div>
       </section>
+      <section class="questions">
+        <div class="questions__wrapper">
+          <h3 class="questions__title">Остались вопросы?<br>Свяжитесь с нами</h3>
+          <ul class="questions__contacts">
+            <li class="questions__item">
+              <h3 class="questions__item-title">Звоните:</h3>
+              <a class="questions__item-val"href="tel:+7 (812) 555-66-66">+7 (812) 555-66-66</a>
+            </li>
+            <li class="questions__item">
+              <h3 class="cquestions__item-title">Пишите:</h3>
+              <p class="questions__item-val">mail@htmlacademy.ru</p>
+            </li>
+            <li class="questions__item">
+              <h3 class="questions__item-title">Приезжайте в гости:</h3>
+              <p class="questions__item-val">ул. Большая<br>Конюшенная, 19/8</p>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <section class="map">
+        <div class="map__wrapper"></div>
+      </section>
     </main>
     <footer class="page-footer">
       <div class="page-footer__wrapper">
-        <h3 class="page-footer__title">Остались вопросы?<br>Свяжитесь с нами</h3>
-        <ul class="page-footer__items contacts">
-          <li class="contacts__item">
-            <h3 class="contacts__item-title">Звоните:</h3>
-            <a class="contacts__item-val"href="tel:+7 (812) 555-66-66">+7 (812) 555-66-66</a>
-          </li>
-          <li class="contacts__item">
-            <h3 class="contacts__item-title">Пишите:</h3>
-            <p class="contacts__item-val">mail@htmlacademy.ru</p>
-          </li>
-          <li class="contacts__item">
-            <h3 class="contacts__item-title">Приезжайте в гости:</h3>
-            <p class="contacts__item-val">ул. Большая<br>Конюшенная, 19/8</p>
-          </li>
+        <div class="page-footer__logo">
+          <img src="img/logo-pink-blue-mobile.svg" width="150" height="40" alt="Pink"/>
+        </div>
+        <ul class="page-footer__socials socials">
+          <li class="socials__item"><a class="socials__link--tw" href="#"></a></li>
+          <li class="socials__item"><a class="socials__link--fb" href="#"></a></li>
+          <li class="socials__item"><a class="socials__link--yt" href="#"></a></li>
         </ul>
-        <div class="page-footer__map"></div>
+        <p class="page-footer__copyright">
+          Разработано:
+          <a class="page-footer__goto" href="#"></a>
+        </p>
       </div>
+    </footer>
 
-    </footer> -->
 
     <!-- <p>Репозиторий создан для обучения на интенсивном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/adaptive">Продвинутый HTML и CSS</a>».</p> -->
   <script src="js/jquery.js"></script>
