Адаптивные сетки photo.html(?)

--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
       </div>
       <nav class="main-menu">
 
-
         <button class="main-menu__toggle"></button>
 
           <ul class="main-menu__items">
@@ -45,7 +44,7 @@
           <!-- <img class="page-header__banner" src="img/iphone-hand-mobile@1x.png"/> -->
         </div>
 
-        <div class="page-header__bottom">
+        <div class="page-header__bottom page-header__bottom--main">
           <div class="btn btn--download">Скачать приложение</div>
           <ul class="apps-links">
             <li class="apps-links__link apps-links__link--apple"><a href=""></a></li>
