Адаптивные сетки photo.html правки-футер

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
         <div class="map__wrapper"></div>
       </section>
     </main>
-    <footer class="page-footer">
+    <footer class="page-footer page-footer--hidden-mobile">
       <div class="page-footer__wrapper">
         <div class="page-footer__logo">
           <img src="img/logo-pink-blue-mobile.svg" width="150" height="40" alt="Pink"/>
