--- a/form.html
+++ b/form.html
@@ -6,87 +6,116 @@
     <title>HTML Academy: Пинк</title>
     <link rel="stylesheet" href="css/style.css">
   </head>
-  <body class="page">
+  <body class="page page__form">
     <header class="page-header">
-      <div class="page-header__wrapper">
-        <div class="page-header__logo">
-          <img src="img/logo-pink-white-mobile.svg" width="77" height="25" alt="Pink"/>
+     <div class="page-header__logo page-header__logo--mobile">
+        <div class="page-header__wrapper">
+          <img src="img/logo-pink-white-mobile.svg" width="75" height="22" alt="Pink"/>
         </div>
-        <nav class="main-menu">
-          <div class="main-menu__toggle"></div>
-          <div class="main-menu__wrapper">
-            <ul class="main-menu__items">
-              <li class="main-menu__item"><a href="#">Главная</a></li>
-              <li class="main-menu__item"><a href="#">Фотографии</a></li>
-              <li class="main-menu__item"><a href="#">Конкурс</a></li>
-              <li class="main-menu__item"><a href="#">htmlacademy</a></li>
-            </ul>
-          </div>
-        </nav>
+      </div>
+      <div class="page-header__logo page-header__logo--tablet">
+        <div class="page-header__wrapper">
+          <img src="img/logotype-white-tablet.png" width="147" height="41" alt="Pink"/>
+        </div>
 
-        <h2 class="page-header__title">Конкурс на самое безбашенное путешествие с Пинк</h2>
+      </div>
+      <div class="page-header__logo page-header__logo--desktop">
+        <div class="page-header__wrapper">
+          <img src="img/logotype-white-desktop.png" width="148" height="40" alt="Pink"/>
+        </div>
+      </div>
+      <nav class="main-menu">
+
+        <button class="main-menu__toggle"></button>
+
+          <ul class="main-menu__items">
+            <li class="main-menu__item"><a href="#">Главная</a></li>
+            <li class="main-menu__item"><a href="#">Фотографии</a></li>
+            <li class="main-menu__item"><a href="#">Конкурс</a></li>
+            <li class="main-menu__item"><a href="#">html academy</a></li>
+          </ul>
+
+      </nav>
+      <div class="page-header__wrapper">
+       
+
+        <h2 class="page-header__title page-header__title--form">Конкурс на самое безбашенное путешествие с Пинк</h2>
       </div>
     </header>
     <main class="main">
-      <div class="main__wrapper">
       <div class="main__top">
         <p>Поделитесь своей историей и получите шанс выиграть ценный приз — 1000 миль на вашу бонусную карту! Пожалуйста, заполните </p>
       </div>
-      <form action="" method="post">
-        <fieldset class="nameinfo">
-          <label class="nameinfo__item">
-            фамилия:
-            <input type="text" value="Укажите фамилию *" name="lastname">
-          </label>
-          <label class="nameinfo__item">
-            имя:
-            <input type="text" value="Введите ваше имя *" name="firstname">
-          </label>
-          <label class="nameinfo__item">
-            отчество:
-            <input type="text" value="Ну и отчество тоже *" name="secondname">
-          </label>
-        </fieldset>
+      <form class="form" action="" method="post">
+        <div class="form__wrapper">
+          <fieldset class="form__item form__item--item-1 nameinfo">
+            <div class="nameinfo__wrapper">
+              <label class="nameinfo__item">
+                фамилия:
+                <input type="text" value="Укажите фамилию *" name="lastname">
+              </label>
+              <label class="nameinfo__item">
+                имя:
+                <input type="text" value="Введите ваше имя *" name="firstname">
+              </label>
+              <label class="nameinfo__item">
+                отчество:
+                <input type="text" value="Ну и отчество тоже *" name="secondname">
+              </label>
+            </div>
+          </fieldset>
 
-        <fieldset class="checklist">
-          <p class="checklist__title">Ваши безбашенные достижения в путешествии</p>
-          <label class="checklist__item"><input type="checkbox" name="check1" checked>Сделал селфи с акулой</label>
-          <label class="checklist__item"><input type="checkbox" name="check2" checked>Обгорел на пляже</label>
-          <label class="checklist__item"><input type="checkbox" name="check3">Видел Чака Норриса</label>
-          <label class="checklist__item"><input type="checkbox" name="check4">Накупил сувениров</label>
-          <label class="checklist__item"><input type="checkbox" name="check5" checked>Удержал башню</label>
-          <label class="checklist__item"><input type="checkbox" name="check6">Разгромил отель</label>
-        </fieldset>
+          <fieldset class="form__item form__item--item-2 checklist">
+            <div class="checklist__wrapper">
+              <p class="checklist__title">Ваши безбашенные достижения в путешествии</p>
+              <label class="checklist__item"><input type="checkbox" name="check1" checked>Сделал селфи с акулой</label>
+              <label class="checklist__item"><input type="checkbox" name="check2" checked>Обгорел на пляже</label>
+              <label class="checklist__item"><input type="checkbox" name="check3">Видел Чака Норриса</label>
+              <label class="checklist__item"><input type="checkbox" name="check4">Накупил сувениров</label>
+              <label class="checklist__item"><input type="checkbox" name="check5" checked>Удержал башню</label>
+              <label class="checklist__item"><input type="checkbox" name="check6">Разгромил отель</label>
+            </div>
+          </fieldset>
 
-        <fieldset class="user-contacts">
-          <label class="user-contacts__item">
-            номер телефона
-            <input type="tel" name="phone-number"  placeholder="Номер, пожалуйста">
-          </label>
+          <fieldset class="form__item form__item--item-3 user-contacts">
+            <div class="user-contacts__wrapper">
+              <label class="user-contacts__item">
+                номер телефона
+                <input type="tel" name="phone-number"  placeholder="Номер, пожалуйста">
+              </label>
 
-          <label class="user-contacts__item">
-            адрес почты
-            <input type="email" name="email" placeholder="Введите почту *">
-          </label>
-        </fieldset>
+              <label class="user-contacts__item">
+                адрес почты
+                <input type="email" name="email" placeholder="Введите почту *">
+              </label>
+            </div>
+          </fieldset>
 
-        <fieldset class="apps">
-          <p class="apps__title">C каким приложением путешествовали</p>
-          <label class="apps__item"><input type="radio" name="app" value="ios" checked>Pink для IOS</label>
-          <label class="apps__item"><input type="radio" name="app" value="ios">Pink для Android</label>
-          <label class="apps__item"><input type="radio" name="app" value="ios">Windows Phone</label>
-        </fieldset>
-
-        <label class="comment">
-          опишите свои эмоции
-          <textarea name="comment" id="comment-field" rows=10>Можно прям в красках, не стесняясь в выражениях</textarea>
-        </label>
-
-        <input type="submit" value="Отправить форму">
-        <p>- обязательные поля</p>
-
+          <fieldset class="form__item form__item--item-4 apps">
+            <div class="apps__wrapper">
+              <p class="apps__title">C каким приложением путешествовали</p>
+              <label class="apps__item"><input type="radio" name="app" value="ios" checked>Pink для IOS</label>
+              <label class="apps__item"><input type="radio" name="app" value="ios">Pink для Android</label>
+              <label class="apps__item"><input type="radio" name="app" value="ios">Windows Phone</label>
+            </div>
+          </fieldset>
+          <fieldset class="form__item form__item--item-5 emotions">
+            <div class="emotions__wrapper">
+            <label class="emotions__comment">
+              опишите свои эмоции
+              <textarea name="comment" id="comment-field" rows=10>Можно прям в красках, не стесняясь в выражениях</textarea>
+            </label>
+            </div>
+          </fieldset>
+          
+          <div class="form__item form__item--item-6 send-form">
+            <div class="send-form__wrapper">
+              <input type="submit" value="Отправить форму">
+              <p>- обязательные поля</p>
+            </div>
+          </div>
+        </div>
       </form>
-      </div>
     </main>
     <footer class="page-footer">
       <div class="page-footer__wrapper">
@@ -106,6 +135,7 @@
     </footer>
 
     <!-- <p>Репозиторий создан для обучения на интенсивном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/adaptive">Продвинутый HTML и CSS</a>».</p> -->
-
+    <script src="js/jquery.js"></script>
+    <script src="js/script.js"></script>
   </body>
 </html>
