--- a/form.html
+++ b/form.html
@@ -32,7 +32,7 @@
             <li class="main-menu__item"><a href="#">Главная</a></li>
             <li class="main-menu__item"><a href="#">Фотографии</a></li>
             <li class="main-menu__item"><a href="#">Конкурс</a></li>
-            <li class="main-menu__item"><a href="#">html academy</a></li>
+            <li class="main-menu__item"><a href="#"><span class="html">html</span> academy</a></li>
           </ul>
 
       </nav>
