--- a/photo.html
+++ b/photo.html
@@ -139,9 +139,9 @@
           <img src="img/logo-pink-blue-mobile.svg" width="150" height="40" alt="Pink"/>
         </div>
         <ul class="page-footer__socials socials">
-          <li class="socials__item"><a class="socials__link--tw" href="#"></a></li>
-          <li class="socials__item"><a class="socials__link--fb" href="#"></a></li>
-          <li class="socials__item"><a class="socials__link--yt" href="#"></a></li>
+          <li class="socials__item"><a class="socials__link socials__link--tw" href="#"></a></li>
+          <li class="socials__item"><a class="socials__link socials__link--fb" href="#"></a></li>
+          <li class="socials__item"><a class="socials__link socials__link--yt" href="#"></a></li>
         </ul>
         <p class="page-footer__copyright">
           Разработано:
