--- a/form.html
+++ b/form.html
@@ -29,9 +29,9 @@
         <button class="main-menu__toggle"></button>
 
           <ul class="main-menu__items">
-            <li class="main-menu__item"><a href="#">Главная</a></li>
-            <li class="main-menu__item"><a href="#">Фотографии</a></li>
-            <li class="main-menu__item"><a href="#">Конкурс</a></li>
+            <li class="main-menu__item"><a href="index.html">Главная</a></li>
+            <li class="main-menu__item"><a href="photo.html">Фотографии</a></li>
+            <li class="main-menu__item"><a href="form.html">Конкурс</a></li>
             <li class="main-menu__item"><a href="#"><span class="html">html</span> academy</a></li>
           </ul>
 
