--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
 
           <ul class="main-menu__items">
             <li class="main-menu__item"><a href="#">Главная</a></li>
-            <li class="main-menu__item"><a href="#">Фотографии</a></li>
-            <li class="main-menu__item"><a href="#">Конкурс</a></li>
+            <li class="main-menu__item"><a href="photo.html">Фотографии</a></li>
+            <li class="main-menu__item"><a href="form.html">Конкурс</a></li>
             <li class="main-menu__item"><a href="#"><span class="html">html</span> academy</a></li>
           </ul>
 
@@ -72,15 +72,15 @@
         <div class="intro__wrapper">
           
           <ul class="intro__suggestions">
-            <li class="intro__item suggestion">
+            <li class="intro__item intro__item--1 suggestion">
               <h3 class="suggestion__title">Поднимает настроение</h3>
               <p class="suggestion__desc">Приложение позволит вам победить осеннюю хандру и депрессию буквально в несколько кликов!</p>
             </li>
-            <li class="intro__item suggestion">
+            <li class="intro__item intro__item--2 suggestion">
               <h3 class="suggestion__title">Меняет мир вокруг</h3>
               <p class="suggestion__desc">Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы усилить эффект</p>
             </li>
-            <li class="intro__item suggestion">
+            <li class="intro__item intro__item--3 suggestion">
               <h3 class="suggestion__title">Заводит новых друзей</h3>
               <p class="suggestion__desc">Ставьте лайки, комментируте, делитесь фотографиями с друзьями и заводите новых</p>
             </li>
@@ -91,7 +91,7 @@
       <section class="effect">
         <div class="effect__wrapper">
           <div class="effect__block effect__block--img">
-
+          <div class="effect__timer">24</div>
           </div>
           <div class="effect__block">
             <div class="effect__title">Эффект<br> на 24 часа!</div>
@@ -120,9 +120,9 @@
             </li>
           </ul>
           <ul class="slider__controls">
-            <li class="slider__input"></li>
-            <li class="slider__input slider__input--active" ></li>
-            <li class="slider__input"></li>
+            <li class="slider__input slider__input--reviews"></li>
+            <li class="slider__input slider__input--reviews slider__input--active" ></li>
+            <li class="slider__input slider__input--reviews"></li>
           </ul>
 
         </div>
@@ -148,9 +148,9 @@
           </table>
 
           <ul class="slider__controls">
-            <li class="slider__input"></li>
-            <li class="slider__input slider__input--active"></li>
-            <li class="slider__input"></li>
+            <li class="slider__input slider__input--advantages"></li>
+            <li class="slider__input slider__input--advantages slider__input--active"></li>
+            <li class="slider__input slider__input--advantages"></li>
           </ul>
         </div>
       </section>
