--- a/index.html
+++ b/index.html
@@ -56,10 +56,7 @@
         </div>
 
       </div>
-      <div class="page-header__bottom page-header__bottom--main">
- 
-        
-      </div>
+      <div class="page-header__bottom page-header__bottom--main"></div>
     </header>
     <main>
       <section class="intro">
